# course-work

./: .gitignore  CMakeLists.txt  README.md  cource.pro  game.h  test_main.cc
Garbage/: Search.hh  main.cpp  player.h  solver.hh  stuff.h
Model/: AStarSolver.hh  AbstractSolver.hh  BasicSolver.hh  BestFSSolver.hh  Board.cc  Board.hh  CachedSolver.hh  ScoringFunctions.hh
QT/: MainPage.cpp  MainPage.h  button.cpp  button.h  computer-board.cpp  computer-board.h  computer-window.cpp  computer-window.h  main-page.cpp  main-page.h  main.cpp  player-board.cpp  player-board.h  two-board-window.cpp  two-board-window.h
Qt/: BoardAnimator.hh  Button.cc  Button.h  ComputerBoard.cpp  ComputerBoard.h  ComputerWindow.cpp  ComputerWindow.h  GlobalSettings.hh  HelpBoard.cc  HelpBoard.hh  LinearAnimation.cc  LinearAnimation.hh  Logger.cc  Logger.hh  MainPage.cpp  MainPage.h  PlayerBoard.cpp  PlayerBoard.h  RandomBoard.cc  RandomBoard.hh  RulesWindow.cc  RulesWindow.hh  SettingsWindow.cc  SettingsWindow.hh  SingleBoardWindow.cpp  SingleBoardWindow.h  TwoBoardWindow.cpp  TwoBoardWindow.h  WinnerWindow.hh  cmake_install.cmake  main.cpp
Qt/Main_autogen/: moc_predefs.h  mocs_compilation.cpp
Qt/Main_autogen/4DVC4UZSMN/: moc_Button.cpp  moc_HelpBoard.cpp  moc_MainPage.cpp  moc_PlayerBoard.cpp  moc_RulesWindow.cpp  moc_SettingsWindow.cpp  moc_SingleBoardWindow.cpp  moc_TwoBoardWindow.cpp
TextGame/: View.pro  bot.cpp  main.cpp  multiplayer.h  stuff.cpp  view.h
c/: main.c
cpp/: .gitignore  CMakeLists.txt  comp_perf.cc  cource.pro  test_main.cc
cpp/Model/: AStarSolver.hh  AbstractSolver.hh  AstarSolverFork.hh  BasicSolver.hh  Board.cc  Board.hh  CachedSolver.hh  ScoringFunctions.hh
cpp/Qt/: Animable.hh  Button.h  CMakeCache.txt  ComputerBoard.h  GlobalSettings.hh  HelpBoard.cc  LinearAnimation.hh  MainPage.cpp  PlayerBoard.cpp  SettingsWindow.cc  SettingsWindow.hh  SingleBoardWindow.cpp  SingleBoardWindow.h
js/: main.js
